# vyatta-cfg-vpn

./: .frlog  .gitignore  COPYING  Jenkinsfile  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-cfg-vpn.postinst.in
etc/logrotate.d/: vyatta-ipsec-logs
lib/Vyatta/: VPNUtil.pm
lib/Vyatta/VPN/: Util.pm  vtiIntf.pm
scripts/: VyattaVPNUtil.pm  dmvpn-config.pl  is_valid_address.pl  vpn-config.pl  vpn-ppp-down  vpn-ppp-up  vti-up-down  vti-up-down.sh  vtiIntf.pm  vyatta-ipsec-dhcp.pl  vyatta-ipsec-dhcp.py  vyatta-vpn-ppp-updown.pl  vyatta-vti-config.pl
src/: cfgvti.c
templates/vpn/: node.def
templates/vpn/ipsec/: node.def
templates/vpn/ipsec/auto-firewall-nat-exclude/: node.def
templates/vpn/ipsec/auto-update/: node.def
templates/vpn/ipsec/copy-tos/: node.def
templates/vpn/ipsec/disable-uniqreqids/: node.def
templates/vpn/ipsec/esp-group/: node.def
templates/vpn/ipsec/esp-group/node.tag/compression/: node.def
templates/vpn/ipsec/esp-group/node.tag/lifetime/: node.def
templates/vpn/ipsec/esp-group/node.tag/mode/: node.def
templates/vpn/ipsec/esp-group/node.tag/node.tag/encryption/: node.def
templates/vpn/ipsec/esp-group/node.tag/node.tag/hash/: node.def
templates/vpn/ipsec/esp-group/node.tag/pfs/: node.def
templates/vpn/ipsec/esp-group/node.tag/proposal/: node.def
templates/vpn/ipsec/ike-group/: node.def
templates/vpn/ipsec/ike-group/node.tag/aggressive-mode/: node.def
templates/vpn/ipsec/ike-group/node.tag/close-action/: node.def
templates/vpn/ipsec/ike-group/node.tag/dead-peer-detection/: node.def
templates/vpn/ipsec/ike-group/node.tag/dead-peer-detection/action/: node.def
templates/vpn/ipsec/ike-group/node.tag/dead-peer-detection/interval/: node.def
templates/vpn/ipsec/ike-group/node.tag/dead-peer-detection/timeout/: node.def
templates/vpn/ipsec/ike-group/node.tag/ikev2-reauth/: node.def
templates/vpn/ipsec/ike-group/node.tag/key-exchange/: node.def
templates/vpn/ipsec/ike-group/node.tag/lifetime/: node.def
templates/vpn/ipsec/ike-group/node.tag/mobike/: node.def
templates/vpn/ipsec/ike-group/node.tag/mode/: node.def
templates/vpn/ipsec/ike-group/node.tag/proposal/: node.def
templates/vpn/ipsec/include-ipsec-conf/: node.def
templates/vpn/ipsec/include-ipsec-secrets/: node.def
templates/vpn/ipsec/ipsec-interfaces/: node.def
templates/vpn/ipsec/ipsec-interfaces/interface/: node.def
templates/vpn/ipsec/logging/: node.def
templates/vpn/ipsec/logging/facility/: node.def
templates/vpn/ipsec/logging/level/: node.def
templates/vpn/ipsec/logging/log-level/: node.def
templates/vpn/ipsec/logging/log-modes/: node.def
templates/vpn/ipsec/nat-networks/: node.def
templates/vpn/ipsec/nat-networks/allowed-network/: node.def
templates/vpn/ipsec/nat-networks/allowed-network/node.tag/exclude/: node.def
templates/vpn/ipsec/nat-traversal/: node.def
templates/vpn/ipsec/profile/: node.def
templates/vpn/ipsec/profile/node.tag/authentication/: node.def
templates/vpn/ipsec/profile/node.tag/authentication/id/: node.def
templates/vpn/ipsec/profile/node.tag/bind/: node.def
templates/vpn/ipsec/profile/node.tag/esp-group/: node.def
templates/vpn/ipsec/profile/node.tag/ike-group/: node.def
templates/vpn/ipsec/site-to-site/: node.def
templates/vpn/ipsec/site-to-site/peer/: node.def
templates/vpn/rsa-keys/: node.def
templates/vpn/rsa-keys/local-key/: node.def
templates/vpn/rsa-keys/local-key/file/: node.def
templates/vpn/rsa-keys/rsa-key-name/: node.def
templates/vpn/rsa-keys/rsa-key-name/node.tag/rsa-key/: node.def
(+51 files in other folders)
